--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
   <section id="about">
     <div class="about">
       <h2>Learn from the best at <span>Elevate Study</span>!</h2>
-      <p>Our expert instructors have 3 years of experience and a proven track record of helping students achieve academic success.</p>
+      <p>A great teacher is someone who inspires, guides, and nurtures their students, helping them grow academically, emotionally, and socially.
+         They bring out the best in each student, believing in them even when they doubt themselves. With patience, empathy, and dedication,
+        they create a loving environment that fosters lifelong learning.</p>
       <a href="#contact" class="btn">Join our community of learners today!</a>
     </div>
   </section>
@@ -142,12 +144,16 @@
     <article class="topper">
       <img src="Photo1.jpg" alt="Topper 1 Photo">
       <h2>Shagun</h2>
-      <p>"Maths used to be a complex subject for me but Shatakshi ma'am is an exceptional teacher who has made mathematics enjoyable for me. Her ability to break down complex problems into simpler terms has allowed me to develop a solid foundation in math. Her dedication to teaching is truly commendable."</p>
+      <p>"Shatakshi Singh is indeed a remarkable teacher who made mathematics come alive for me. Also, her explanation and writing practice strategy helped 
+        me score good in social science. Her patient guidance and explanations helped me grasp complex concepts easily.
+         Her enthusiasm and passion for teaching are truly inspiring."</p>
     </article>
     <article class="topper">
       <img src="Photo2.png" alt="Topper 2 Photo">
       <h2>Riya</h2>
-      <p>"A great teacher is someone who inspires, guides, and nurtures their students, helping them grow academically, emotionally, and socially. They bring out the best in each student, believing in them even when they doubt themselves. With patience, empathy, and dedication, they create a loving environment that fosters lifelong learning."</p>
+      <p>"Maths used to be a complex subject for me but Shatakshi ma'am is an exceptional teacher who has made mathematics enjoyable for me. 
+        Her ability to break down complex problems into simpler terms has allowed me to develop a solid foundation in math. 
+        Her dedication to teaching is truly commendable."</p>
     </article>
   </div>
 </section>
@@ -155,41 +161,48 @@
   <!-- Contact Page Section -->
   <section id="contact">
     <h2>Contact Me!</h2>
-    <form action="#">
-  <div class="imput-box">
-    <div class="imput-field field">
-    <input type="text" placeholder="full Name" id="name"
-    class="item" actocomplete="off">
-  </div>
-  <div class="imput-field field">
-  <input type="text" placeholder="Email Address" id="email"
-  class="item" actocomplete="off">
-</div>
-</div>
-<div class="imput-field field">
-<input type="text" placeholder="Phone Number" id="Phone"
-class="item" actocomplete="off">
-</div>
-</div>
-<div class="imput-field field">
-<input type="text" placeholder="Subject" id="Subject"
-class="item" actocomplete="off">
-</div>
-</div>
-
-<div class="textarea-field field">
-  <textarea name="" id="message" cols="30" rows="10"
-    placeholder="Your message" class="item"
-  autocomplete="off">
-</textarea>
-</div>
-<button type="submit"> Sent Message</button>
-</form>
-<address>
-  <p>Address: E-18/T-574 Awas Vikas Colony, near Hanuman Mandir Park, Munnu Khera, Para, Lucknow, 226009
-  <br><a href="elevate.study1509@gmail.com">elevate.study1509@gmail.com</a>
-  <br>Phone: 8887548744, 8700123622</p>
-</address>
+    <form action="https://formsubmit.co/elevate.study1509@gmail.com" method="post">
+      <div class="input-box">
+        <label for="name">Full Name:</label>
+        <div class="input-field field">
+          <input type="text" name="name" required placeholder="Full Name" id="name" class="item" autocomplete="off">
+        </div>
+      </div>
+      <div class="input-box">
+        <label for="email">Email Address:</label>
+        <div class="input-field field">
+          <input type="text" name="email" required placeholder="Email Address" id="email" class="item" autocomplete="off">
+        </div>
+      </div>
+      <div class="input-box">
+        <label for="Phone">Phone Number:</label>
+        <div class="input-field field">
+          <input type="text" name="Phone" required placeholder="Phone Number" id="Phone" class="item" autocomplete="off">
+        </div>
+      </div>
+      <div class="input-box">
+        <label for="Subject">Subject:</label>
+        <div class="input-field field">
+          <input type="text" name="Subject" required placeholder="Subject" id="Subject" class="item" autocomplete="off">
+        </div>
+      </div>
+      <div class="input-box">
+        <label for="Message">Message:</label>
+        <div class="input-field field">
+          <input type="text" name="Message" required placeholder="Message" id="Message" class="item" autocomplete="off">
+        </div>
+      </div>
+  
+      <button type="submit">Send Message</button>
+      <input type="hidden" name="_template" value="table">
+      <input type="hidden" name="_captcha" value="false">
+    </form>
+  
+    <address>
+      <p>Address: E-18/T-574 Awas Vikas Colony, near Hanuman Mandir Park, Munnu Khera, Para, Lucknow, 226009</p>
+      <p><a href="elevate.study1509@gmail.com">elevate.study1509@gmail.com</a></p>
+      <p>Phone: 8887548744, 8700123622</p>
+    </address>
   </section>
 </body>
 </html>
