--- a/index.html
+++ b/index.html
@@ -143,17 +143,23 @@
   <div class="topper-grid">
     <article class="topper">
       <img src="Photo1.jpg" alt="Topper 1 Photo">
-      <h2>Shagun</h2>
+      <h2>Shagun Singh (87.40%)</h2>
       <p>"Shatakshi Singh is indeed a remarkable teacher who made mathematics come alive for me. Also, her explanation and writing practice strategy helped 
         me score good in social science. Her patient guidance and explanations helped me grasp complex concepts easily.
-         Her enthusiasm and passion for teaching are truly inspiring."</p>
+         Her enthusiasm and passion for teaching are truly inspiring."</p>
+         <br>Maths-92
+         <br>SocialSciense-92
+         <br>Science-84
     </article>
     <article class="topper">
       <img src="Photo2.png" alt="Topper 2 Photo">
-      <h2>Riya</h2>
+      <h2>Riya Gupta (87.60%)</h2>
       <p>"Maths used to be a complex subject for me but Shatakshi ma'am is an exceptional teacher who has made mathematics enjoyable for me. 
         Her ability to break down complex problems into simpler terms has allowed me to develop a solid foundation in math. 
-        Her dedication to teaching is truly commendable."</p>
+        Her dedication to teaching is truly commendable."</p>
+        <br>Maths-91
+        <br>SocialSciense-92
+        <br>Science-83
     </article>
   </div>
 </section>
