--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         me score good in social science. Her patient guidance and explanations helped me grasp complex concepts easily.
          Her enthusiasm and passion for teaching are truly inspiring."</p>
          <br>Maths-92
-         <br>SocialSciense-92
+         <br>SocialScience-92
          <br>Science-84
     </article>
     <article class="topper">
@@ -158,7 +158,7 @@
         Her ability to break down complex problems into simpler terms has allowed me to develop a solid foundation in math. 
         Her dedication to teaching is truly commendable."</p>
         <br>Maths-91
-        <br>SocialSciense-92
+        <br>SocialSciece-92
         <br>Science-83
     </article>
   </div>
