--- a/index.html
+++ b/index.html
@@ -148,17 +148,17 @@
         me score good in social science. Her patient guidance and explanations helped me grasp complex concepts easily.
          Her enthusiasm and passion for teaching are truly inspiring."</p>
          <br>Maths-92
-         <br>SocialScience-92
+         <br>Social Science-92
          <br>Science-84
     </article>
     <article class="topper">
       <img src="Photo2.png" alt="Topper 2 Photo">
       <h2>Riya Gupta (87.60%)</h2>
-      <p>"Maths used to be a complex subject for me but Shatakshi ma'am is an exceptional teacher who has made mathematics enjoyable for me. 
+      <p>"Maths used to be a complex subject for me but Shatakshi mam is an exceptional teacher who has made mathematics enjoyable for me. 
         Her ability to break down complex problems into simpler terms has allowed me to develop a solid foundation in math. 
         Her dedication to teaching is truly commendable."</p>
         <br>Maths-91
-        <br>SocialSciece-92
+        <br>Social Science-92
         <br>Science-83
     </article>
   </div>
